# plr-minimum-effective

./: LICENSE  README.md  pyproject.toml
min_effective/: __init__.py  agent.py  bridge.py  droplet.py  loop.py  prior.py  run.py  surface.py  vision.py
tests/: test_droplet.py  test_min_effective.py  test_vision.py
