[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "plr-minimum-effective"
version = "0.1.0"
description = "Discover the minimal effective reaction (max unique reads per dollar), taught prior, CV-honest search"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
packages = ["min_effective"]
